Updated '/_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -109,3 +109,18 @@ gigs:
     location: Thelonious
     venue: Buenos Aires  (Argentina)
     url: ''
+  - title: 'Mike del Ferro trio & orchestra'
+    date: 2016-05-27T21:00:00.000Z
+    location: Conservatiory Auditorium
+    venue: Kiev (Ukraine)
+    url: ''
+  - title: Canto Ostinato for 10 pianists at Festival Classique
+    date: 2016-06-12T16:00:00.000Z
+    location: tba
+    venue: The Hague (NL)
+    url: ''
+  - title: Canto Ostinato meets Jazz (with Jeroen and Sandra van Veen)
+    date: 2016-06-17T20:00:00.000Z
+    location: tba
+    venue: Tirana (Albania)
+    url: ''
