Updated '/_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -124,3 +124,8 @@ gigs:
     location: tba
     venue: Tirana (Albania)
     url: ''
+  - title: Solo recital
+    date: 2016-03-29T20:00:00.000Z
+    location: Universidad de Antioquia
+    venue: Medellin (Colombia)
+    url: ''
