Updated '/_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ gigs:
     url: ''
   - title: Mike del Ferro trio with Marcio Bahia and Andre Vasconcellos
     date: 2016-03-19T20:00:00.000Z
-    location: Cafe com letras
+    location: Memorial da Vale
     venue: Belo Horizonte (Brazil)
     url: ''
   - title: Mike del Ferro trio
