Updated '/_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -129,3 +129,8 @@ gigs:
     location: Universidad de Antioquia
     venue: Medellin (Colombia)
     url: ''
+  - title: Mike del Ferro/Marcio Bahia
+    date: 2016-03-20T20:00:00.000Z
+    location: Café com Letras Savassi
+    venue: Belo Horizonte (Brazil)
+    url: ''
