Updated '/_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 gigs:
   - title: Mike del Ferro/Marcio Bahia/Andre Vasconcellos
-    date: 2016-03-12T19:15:00.000Z
-    location: Pinho Brasil
-    venue: Rio de Janeiro (Brazil)
-    url: 'https://www.facebook.com/pinhobrasilprojetos/'
+    date: 2016-03-12T19:00:00.000Z
+    location: SOLAR DO JAMBEIRO
+    venue: Rio de Janeiro-NITERÓI (Brazil)
+    url: 'https://www.facebook.com/events/1755391888013330/'
   - title: 'with the Brasilia Symphony orchestra,'
     date: 2016-03-08T19:00:00.000Z
     location: Teatro Pedro Calmon
