Updated '/_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 gigs:
   - title: Mike del Ferro/Marcio Bahia/Andre Vasconcellos
     date: 2016-03-12T19:00:00.000Z
-    location: SOLAR DO JAMBEIRO
+    location: Solar do Jambeiro
     venue: Rio de Janeiro-NITERÓI (Brazil)
     url: 'https://www.facebook.com/events/1755391888013330/'
   - title: 'with the Brasilia Symphony orchestra,'
