Updated '/_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ gigs:
     location: Solar do Jambeiro
     venue: Rio de Janeiro-NITERÓI (Brazil)
     url: 'https://www.facebook.com/events/1755391888013330/'
-  - title: 'with the Brasilia Symphony orchestra,'
+  - title: with the Brasilia Symphony orchestra
     date: 2016-03-08T19:00:00.000Z
     location: Teatro Pedro Calmon
     venue: Brasilia (Brazil)
