Updated '/_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -139,3 +139,8 @@ gigs:
     location: CCBB Rio de Janeiro
     venue: Rio de Janeiro (Brazil)
     url: 'https://www.facebook.com/ccbb.rj/'
+  - title: Mike del Ferro/Marcio Bahia/Andre Vasconcellos
+    date: 2016-03-18T21:30:00.000Z
+    location: Triboz
+    venue: Rio de Janeiro (Brazil)
+    url: ''
