--- a/_config.yml
+++ b/_config.yml
@@ -144,3 +144,8 @@ gigs:
     location: Triboz
     venue: Rio de Janeiro (Brazil)
     url: ''
+  - title: Mike del Ferro/Marcio Bahia/Andre Vasconcellos
+    date: 2016-03-13T17:00:00.000Z
+    location: Centro Cultural Banco do Brasil  (Sala 26)
+    venue: Rio de Janeiro (Brazil)
+    url: ''
