Updated '/_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -1,29 +1,29 @@
 gigs:
-  - title: Mike del Ferro/Marcio Bahia/Andre Vasconcellos
-    date: 2016-03-12T19:00:00.000Z
-    location: Solar do Jambeiro
-    venue: Rio de Janeiro-NITERÓI (Brazil)
-    url: 'https://www.facebook.com/events/1755391888013330/'
-  - title: with the Brasilia Symphony orchestra
-    date: 2016-03-08T19:00:00.000Z
-    location: Teatro Pedro Calmon
-    venue: Brasilia (Brazil)
+  - title: 'Mike del Ferro, solo recital'
+    date: 2016-03-29T18:00:00.000Z
+    location: Teatro Universario Camilo Torres restrepo
+    venue: Medellin-Colombia
     url: ''
-  - title: Mike del Ferro
-    date: 2016-03-11T20:00:00.000Z
-    location: SESC-Teatro Newton Rossi
-    venue: Ceilandia (Brazil)
-    url: ''
-  - title: Mike del Ferro trio with Marcio Bahia and Andre Vasconcellos
-    date: 2016-03-19T20:00:00.000Z
-    location: Memorial da Vale
-    venue: Belo Horizonte (Brazil)
+  - title: 'Mike del Ferro, masterclass'
+    date: 2016-03-29T09:00:00.000Z
+    location: EAFIT
+    venue: Medellin-Colombia
     url: ''
   - title: Mike del Ferro trio
-    date: 2016-03-28T20:00:00.000Z
-    location: tba
-    venue: Medellin (Colombia)
+    date: 2016-03-30T20:00:00.000Z
+    location: Zorba
+    venue: Medellin-Colombia
     url: ''
+  - title: 'Mike del Ferro trio, lecture and concert'
+    date: 2016-04-02T16:00:00.000Z
+    location: Edificio Lugo (calle 6)
+    venue: Medellin-Colombia
+    url: ''
+  - title: Mike del Ferro / Lupa Santiago
+    date: 2016-04-07T21:00:00.000Z
+    location: Jazz B
+    venue: Sao Paulo-Brazil
+    url: 'https://www.facebook.com/club.JazzB/photos/gm.1665884860344064/1081078078610514/?type=3&theater'
   - title: Mike del Ferro and Mike Boddé pianoduo/video artist Mirthe Dokter
     date: 2016-04-15T20:00:00.000Z
     location: De Kleine Komedie
@@ -75,31 +75,31 @@ gigs:
     venue: Den Bosch (NL)
     url: www.detoonzaal.nl
   - title: Masterclass
-    date: 2016-03-09T14:00:00.000Z
-    location: UNB University
-    venue: Brasilia (Brazil)
-    url: ''
-  - title: Masterclass
-    date: 2016-03-10T10:00:00.000Z
-    location: UNB University
-    venue: Brasilia (Brazil)
-    url: ''
+    date: 2016-04-07T15:00:00.000Z
+    location: Souza Lima
+    venue: Sao Paulo-Brazil
+    url: 'https://www.facebook.com/events/100309520364785/'
+  - title: "Mike del Ferro / Lupa Santiago 5'"
+    date: 2016-04-06T21:00:00.000Z
+    location: Madeleine
+    venue: Sao Paulo-Brazil
+    url: 'R. Aspicuelta, 201 - Vila Madalena, São Paulo'
   - title: 'Mike del Ferro & Pekka Pylkannen'
     date: 2016-10-28T20:00:00.000Z
     location: Birds Eye
     venue: Basel (CH)
     url: www.birdseye.ch
-  - title: Masterclass
-    date: 2016-03-16T16:00:00.000Z
-    location: Federal University
-    venue: Rio de Janeiro (Brazil)
+  - title: "Mike del Ferro / Lupa Santiago 5'"
+    date: 2016-04-08T20:00:00.000Z
+    location: Casa do Musica
+    venue: Avare-Sao Paulo-Brazil
     url: ''
-  - title: 'Mike del Ferro trio & Ricardo Cavalli'
-    date: 2016-03-22T21:00:00.000Z
-    location: tba
-    venue: Bahia Blanca (Argentina)
+  - title: '"networking and selfmanagement for musicians"'
+    date: 2016-10-27T15:00:00.000Z
+    location: Jazzschule
+    venue: Basel-Switserland
     url: ''
-  - title: Mike del Ferro trio
+  - title: Mike del Ferro - live TV Podium Witteman
     date: 2016-03-23T21:00:00.000Z
     location: Cocina de cultura
     venue: Cordoba  (Argentina)
