Updated '/_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ gigs:
     venue: Dutch National Television
     url: ''
   - title: Canto Ostinato meets Jazz (with Jeroen and Sandra van Veen)
-    date: 2016-06-17T20:00:00.000Z
+    date: 2016-06-18T20:00:00.000Z
     location: TBA
     venue: Shikodra-Albania
     url: ''
@@ -121,7 +121,7 @@ gigs:
     url: ''
   - title: Canto Ostinato meets Jazz (with Jeroen and Sandra van Veen)
     date: 2016-06-17T20:00:00.000Z
-    location: tba
+    location: Opera House
     venue: Tirana (Albania)
     url: ''
   - title: Solo recital
