--- a/_config.yml
+++ b/_config.yml
@@ -4,11 +4,6 @@ gigs:
     location: Splendor
     venue: Amsterdam
     url: www.splendoramsterdam.com
-  - title: The music of Queen Mike del Ferro / Jeroen van Veen/ Malgosia Fiebig
-    date: 2016-06-11T20:00:00.000Z
-    location: Belfort
-    venue: Brugge (Belgium)
-    url:
   - title: Mike del Ferro / Jeroen van Veen/ Malgosia Fiebig
     date: 2016-08-22T20:00:00.000Z
     location: Dom Tower
@@ -37,13 +32,8 @@ gigs:
   - title: Canto Ostinato meets Jazz (with Jeroen and Sandra van Veen)
     date: 2016-06-17T20:00:00.000Z
     location: TBA
-    venue: Shikodra-Albania
+    venue: Shkodra -Albania
     url:
-  - title: Canto Ostinato for 10 pianists at Festival Classique
-    date: 2016-06-12T16:00:00.000Z
-    location: Kurhaus
-    venue: Scheveningen- The Hague (NL)
-    url: 'http://www.festivalclassique.nl/nl/agenda-en-kaarten/37/canto-ostinato/'
   - title: Canto Ostinato meets Jazz (with Jeroen and Sandra van Veen)
     date: 2016-06-16T20:30:00.000Z
     location: Opera House
