Updated '/_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 gigs:
-  - title: 'Duo Mike Boddé & Mike del Ferro'
-    date: 2016-06-22T20:00:00.000Z
-    location: Splendor
-    venue: Amsterdam
-    url: www.splendoramsterdam.com
+  - title: 'Duo Claron McFadden& Mike del Ferro'
+    date: 2016-08-12T20:00:00.000Z
+    location: Radar beyond music festival
+    venue: 'Varna, Bulgaria'
+    url:
   - title: Mike del Ferro / Jeroen van Veen/ Malgosia Fiebig
     date: 2016-08-22T20:00:00.000Z
     location: Dom Tower
@@ -28,16 +28,6 @@ gigs:
     date: 2016-10-26T14:30:00.000Z
     location: Jazzschule
     venue: Basel-Switserland
-    url:
-  - title: Canto Ostinato meets Jazz (with Jeroen and Sandra van Veen)
-    date: 2016-06-17T20:00:00.000Z
-    location: TBA
-    venue: Shkodra -Albania
-    url:
-  - title: Canto Ostinato meets Jazz (with Jeroen and Sandra van Veen)
-    date: 2016-06-16T20:30:00.000Z
-    location: Opera House
-    venue: Tirana (Albania)
     url:
   - title: Mike del Ferro trio
     date: 2017-01-14T20:00:00.000Z
