Updated '/_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ gigs:
     url: 'http://www.seinconcerten.nl/'
   - title: 'Mike del Ferro, Mola Sylla, Pernell Saturnino and Christian Galvez'
     date: 2016-08-01T19:00:00.000Z
-    location: Flores Festival
+    location: Flores Festival- Parque Cultural Nocturno
     venue: 'Medellin, Colombia'
     url:
   - title: Piano duo Mike Boddé and Mike del Ferro
