Updated '/_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -64,3 +64,13 @@ gigs:
     location: Noord Zie Jazz
     venue: Rotterdam
     url: 'http://www.noordziejazz.nl/#Bergsingelkerk'
+  - title: 'Who is the Bossa (with José Koning, Nelson faria and Daniel Pezzoti)'
+    date: 2016-10-21T20:00:00.000Z
+    location: Ruïnekerk
+    venue: Bergen (NL)
+    url:
+  - title: 'Who is the Bossa (with José Koning, Nelson faria and Daniel Pezzoti)'
+    date: 2016-10-22T20:00:00.000Z
+    location: 'Porgy & Bess'
+    venue: Terneuzen (NL)
+    url:
