Updated '/_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 gigs:
-  - title: 'Duo Claron McFadden& Mike del Ferro'
+  - title: 'Duo Claron McFadden& Mike del Ferro.'
     date: 2016-08-12T20:00:00.000Z
     location: Radar beyond music festival
     venue: 'Varna, Bulgaria'
