--- a/_config.yml
+++ b/_config.yml
@@ -74,3 +74,13 @@ gigs:
     location: 'Porgy & Bess'
     venue: Terneuzen (NL)
     url:
+  - title: 'Solo recital, pianowandeling Culemborg'
+    date: 2016-09-11T13:30:00.000Z
+    location: tba
+    venue: Culemborg (NL)
+    url:
+  - title: 'Solo recital, pianowandeling Culemborg'
+    date: 2016-09-11T13:30:00.000Z
+    location: tba
+    venue: Culemborg (NL)
+    url:
