Updated '/_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -59,9 +59,9 @@ gigs:
     location: Flores Festival- Parque Cultural Nocturno
     venue: 'Medellin, Colombia'
     url:
-  - title: Mike del Ferro trio feat. Christian Galvez
+  - title: Mike del Ferro trio feat. Christian Galvez y Alejandro Espinosa
     date: 2016-08-03T20:00:00.000Z
-    location: TBA
+    location: 'Universidad Central, Aula Magna'
     venue: Santiago de Chile
     url:
   - title: 'Who is the Bossa (with José Koning, Nelson faria and Daniel Pezzoti)'
