Updated '/_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -81,11 +81,21 @@ gigs:
     url:
   - title: Mike del Ferro trio
     date: 2016-07-22T20:00:00.000Z
-    location: TBA
+    location: 'B&L PIANO PUB CR. 4A # 66-03'
     venue: 'Bogota, Colombia'
     url:
   - title: Mike del Ferro trio
-    date: 2016-07-23T20:00:00.000Z
-    location: TBA
+    date: 2016-07-23T21:30:00.000Z
+    location: 'MATIK-MATIK CR. 11 # 67-20 9:30 PM $10.000'
     venue: 'Bogota, Colombia'
     url:
+  - title: Mike del Ferro trio
+    date: 2016-07-28T20:00:00.000Z
+    location: la Pascasia
+    venue: Medellin (Colombia)
+    url:
+  - title: Mike del Ferro- solo recital
+    date: 2016-11-03T20:30:00.000Z
+    location: Splendor
+    venue: Amsterdam (NL)
+    url: www.splendoramsterdam.com
