--- a/_config.yml
+++ b/_config.yml
@@ -71,7 +71,7 @@ gigs:
     url:
   - title: 'Solo recital, pianowandeling Culemborg'
     date: 2016-09-11T13:30:00.000Z
-    location: tba
+    location: De Fransche School
     venue: Culemborg (NL)
     url:
   - title: 'Mike del Ferro & Claron McFadden'
@@ -105,7 +105,7 @@ gigs:
     venue: Zuthpen (NL)
     url:
   - title: Duo with Kim Hoorweg
-    date: 2016-09-18T15:00:00.000Z
-    location: TBA
+    date: 2016-09-18T14:30:00.000Z
+    location: de Gelderlandfabriek
     venue: Culemborg (NL)
-    url:
+    url: 'https://www.facebook.com/events/1566075027035665/'
