Updated '/_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ gigs:
     location: Fontys Hogeschool
     venue: Tilburg (NL)
     url:
-  - title: only private concerts until mid october
+  - title: only private concerts until 20 october
     date: 2016-09-19T00:00:00.000Z
     location:
     venue:
