--- a/_config.yml
+++ b/_config.yml
@@ -94,3 +94,8 @@ gigs:
     location: De Roode bioscoop
     venue: Amsterdam (NL)
     url: 'http://www.roodebioscoop.nl/Roode-Zondagen/467-CLARON-MCFADDEN-en-MIKE-DEL-FERRO/1338'
+  - title: Mike del Ferro trio
+    date: 2016-10-08T08:30:00.000Z
+    location: Fenix Music Factory
+    venue: Rotterdam (NL)
+    url: 'https://www.facebook.com/fenixmusicfactory/?fref=ts'
