Updated '/_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -99,3 +99,8 @@ gigs:
     location: Fenix Music Factory
     venue: Rotterdam (NL)
     url: 'https://www.facebook.com/fenixmusicfactory/?fref=ts'
+  - title: 'recordings for album, tba'
+    date: 2016-09-23T00:00:00.000Z
+    location: Dublin
+    venue: Ireland
+    url:
