--- a/_config.yml
+++ b/_config.yml
@@ -1,96 +1,126 @@
 gigs:
   - title: 'Mike del Ferro & Pekka Pylkannen'
-    date: 2016-10-29T20:00:00.000Z
+    date: 2016-10-29 20:00:00
     location: Birdseye
     venue: Basel (CH)
     url: www.birdseye.ch
   - title: 'Mike del Ferro trio & Claron McFadden'
-    date: 2017-01-06T20:00:00.000Z
+    date: 2017-01-06 20:00:00
     location: De Toonzaal
     venue: Den Bosch (NL)
     url: www.detoonzaal.nl
   - title: 'Mike del Ferro & Pekka Pylkannen'
-    date: 2016-10-28T20:00:00.000Z
+    date: 2016-10-28 20:00:00
     location: Birds Eye
     venue: Basel (CH)
     url: www.birdseye.ch
   - title: '"networking and selfmanagement for musicians"'
-    date: 2016-10-26T14:30:00.000Z
+    date: 2016-10-26 14:30:00
     location: Jazzschule
     venue: Basel-Switserland
     url:
   - title: Mike del Ferro trio
-    date: 2017-01-14T20:00:00.000Z
+    date: 2017-01-14 20:00:00
     location: 10/14 Club
     venue: Warszaw-Poland
     url:
   - title: Mike del Ferro trio
-    date: 2017-01-17T20:00:00.000Z
+    date: 2017-01-17 20:00:00
     location: TBA
     venue: Katowice-Poland
     url:
   - title: Mike del Ferro / Mike Boddé pianoduo
-    date: 2017-02-10T20:30:00.000Z
+    date: 2017-02-10 20:30:00
     location: De Doelen
     venue: Rotterdam-NL
     url: www.dedoelen.nl
   - title: Mike del Ferro / Claron McFadden - opera meets jazz
-    date: 2017-01-07T20:00:00.000Z
+    date: 2017-01-07 20:00:00
     location: Splendor
     venue: Amsterdam
     url: www.splendoramsterdam.com
   - title: 'Mike del Ferro & Claron McFadden'
-    date: 2016-11-04T20:00:00.000Z
+    date: 2016-11-04 20:00:00
     location: De Morgenster
     venue: Hilversum (NL)
     url: 'http://www.seinconcerten.nl/'
   - title: 'Who is the Bossa (with José Koning, Nelson faria and Daniel Pezzoti)'
-    date: 2016-10-21T20:00:00.000Z
+    date: 2016-10-21 20:00:00
     location: Ruïnekerk
     venue: Bergen (NL)
     url:
   - title: 'Who is the Bossa (with José Koning, Nelson Faria and Daniel Pezzoti)'
-    date: 2016-10-22T20:00:00.000Z
+    date: 2016-10-22 20:00:00
     location: 'Porgy & Bess'
     venue: Terneuzen (NL)
     url:
   - title: Mike del Ferro trio
-    date: 2016-10-08T20:30:00.000Z
+    date: 2016-10-08 20:30:00
     location: Fenix Music Factory
     venue: Rotterdam
     url:
   - title: 'Mike del Ferro & Claron McFadden'
-    date: 2016-11-05T20:00:00.000Z
+    date: 2016-11-05 20:00:00
     location: Tenclub
     venue: Amsterdam (NL)
     url:
   - title: Mike del Ferro- solo recital
-    date: 2016-11-03T20:30:00.000Z
+    date: 2016-11-03 20:30:00
     location: Splendor
     venue: Amsterdam (NL)
     url: www.splendoramsterdam.com
   - title: Mike del Ferro trio
-    date: 2016-11-01T20:00:00.000Z
+    date: 2016-11-01 20:00:00
     location: Jazzclub
     venue: Vorden (NL)
     url:
   - title: Mike del Ferro trio
-    date: 2016-12-11T22:00:00.000Z
+    date: 2016-12-11 22:00:00
     location: Jazzclub
     venue: Zuthpen (NL)
     url:
   - title: 'Who is the Bossa (with José Koning, Nelson Faria and Daniel Pezzoti)'
-    date: 2016-10-23T14:00:00.000Z
+    date: 2016-10-23 14:00:00
     location: Berkhout
     venue: Kerk
     url:
   - title: 'Who is the Bossa (with José Koning, Nelson Faria and Daniel Pezzoti)'
-    date: 2016-10-23T20:00:00.000Z
+    date: 2016-10-23 20:00:00
     location: Splendor
     venue: Amsterdam (NL)
     url: www.splendoramsterdam.com
   - title: 'Mike del Ferro & Claron McFadden'
-    date: 2016-11-20T14:30:00.000Z
+    date: 2016-11-20 14:30:00
     location: De Roode bioscoop
     venue: Amsterdam (NL)
     url: 'http://www.roodebioscoop.nl/Roode-Zondagen/467-CLARON-MCFADDEN-en-MIKE-DEL-FERRO/1338'
+  - title: 'Lecture on "selfmanagement and networking for Musicians'
+    date: 2016-10-13 18:00:00
+    location: Flagey
+    venue: 'Brussels, Belgium'
+    url: 'http://www.flagey.be/nl/programma/19380/music-pitch-new-opportunities-for-jazz-benelux'
+  - title: Duo Mike Boddé and Mike del Ferro (Mike Kwadraat)
+    date: 2016-11-22 19:00:00
+    location: Pianino Theater
+    venue: Den Haag (NL)
+    url: 'http://www.pianinotheater.nl/styled-10/concerten.html'
+  - title: Duo with Leoni Jansen
+    date: 2016-12-17 20:00:00
+    location: Brocope Theater
+    venue: Oldeberkoop (Friesland/NL)
+    url:
+  - title: Mike del Ferro trio with special guests
+    date: 2017-01-09 19:00:00
+    location: TBA
+    venue: Sjarsha (Dubai)
+    url:
+  - title: 'Tour Sweden, jan 31-feb 8 more details soon'
+    date: 2017-01-31 15:00:00
+    location: Mike del Ferro
+    venue: Jazzclub
+    url: Valkenswaard (NL)
+  - title:
+    date:
+    location:
+    venue:
+    url:
