Updated '/_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -116,11 +116,11 @@ gigs:
     url:
   - title: 'Tour Sweden, jan 31-feb 8 more details soon'
     date: 2017-01-31 15:00:00
-    location: Mike del Ferro
-    venue: Jazzclub
-    url: Valkenswaard (NL)
-  - title:
-    date:
     location:
     venue:
+    url:
+  - title: Mike del Ferro trio
+    date:
+    location: Jazzclub
+    venue: Valkenswaard (NL)
     url:
