--- a/_config.yml
+++ b/_config.yml
@@ -120,7 +120,7 @@ gigs:
     venue:
     url:
   - title: Mike del Ferro trio
-    date:
+    date: 2017-03-12 15:00:00
     location: Jazzclub
     venue: Valkenswaard (NL)
     url:
